# nuraxi-backend-assignment

./: .env  Dockerfile  Dockerfile.test  README.md  SOLUTION.md  docker-compose-local.yml  docker-compose-test.yml  docker-compose.yml  event_bus.py  model_service.py  pyproject.toml  streaming_service.py
app/: database.py  main.py  models.py  tests.py
