[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.116.1",
    "pandas>=2.3.2",
    "pydantic>=2.11.9",
    "scikit-learn>=1.7.2",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "pylsp-mypy>=0.7.0",
    "python-lsp-ruff>=2.2.2",
    "python-lsp-server>=1.13.1",
]
